Project project_name {
  database_type: 'PostgreSQL'
  Note: 'Perch Mount System DB'
}


Table members {
    id uuid [ pk, unique ]
    gmail email [ not null ]
    username varchar [ not null ]
    first_name varchar [ not null ]
    last_name varchar [ not null ]
    position positions [ not null ]
    super_admin boolean [ not null, default: false ]
    admin boolean [ not null, default: false]
    actived boolean [ not null, default: false]
    blocked boolean [ not null, default: false]
}

Table projects {
    id uuid [ pk, unique ]
    name varchar
}

Table perch_mounts {
    id uuid [ pk, unique ]
    perch_mount_name varchar [ not null ]
    longitude float [ not null ]
    latitude float [ not null ]
    habitat habitats [ not null ]
    project_id uuid  [ ref: > projects.id ]
    claim_by_id uuid [ ref: > members.id ]
    is_priority boolean
    terminated boolean [ default: false ]
    layer mount_layers
    note text
}

Table sections {
    id uuid [ pk, unique ]
    perch_mount_id uuid [ ref: > perch_mounts.id ]
    mount_type_id uuid [ ref: > mount_types.id ]
    camera_id uuid [ ref: > cameras.id ]
    swapped_date date [ not null ]
    ground_camera boolean [ not null ]
    valid boolean [ default: true ]
    note text
}

Table section_swappers {
    swapper_id uuid [ ref: > members.id ]
    section_id uuid [ ref: > sections.id ]
}

Table media {
    id uuid [ pk, unique ]
    section_id uuid [ ref: > sections.id ]
    medium_datetime datetime [ not null ]
    created_datetime datetime [ not null ]
    deleted_datetime datetime
    status media_status
    type media_type
    nas_path varchar
}

Table detected_media_contents {
    medium_id uuid [ ref: - media.id ]
    detected_time datetime [ not null ]
}

Table checked_media_content {
    medium_id uuid [ ref: - media.id ]
    empty_checked_time datetime
    empty_checker_id uuid [ ref: > members.id ]
}

Table unchecked_accidental_media_contents {
    medium_id uuid [ ref: - media.id ]
}

Table unreviewed_media_contents {
    medium_id uuid [ ref: - media.id ]
}

Table accidental_media_contents {
    medium_id uuid [ ref: - media.id ]
}

Table reviewed_media_contents {
    medium_id uuid [ ref: - media.id ]
    reviewed_time datetime
    reviewer_id uuid [ ref: > members.id ]
    featured_by_id uuid [ ref: > members.id ]
    event_id uuid [ ref: > events.id ]
    behavior_id uuid [ ref: > behaviors.id ]
}

Table individuals {
    id uuid [ pk, unique ]
    medium_id uuid  [ ref: > media.id ]
    prey_identified_status prey_identified_status
    tag_status tag_status
    note text
}

Table detected_individuals_contents {
    individual_id uuid [ ref: - individuals.id ]
    taxon_order_by_ai integer [ ref: > species.taxon_order ]
    xmin float
    xmax float
    ymin float
    ymax float
}

Table reviewed_individuals_contents {
    individual_id uuid [ ref: - individuals.id ]
    taxon_order_by_human integer [ ref: > species.taxon_order ]
    xmin float
    xmax float
    ymin float
    ymax float
}

Table unidentified_prey_individuals_contents {
    individual_id uuid [ ref: - individuals.id ]
    prey boolean
}

Table identified_prey_individuals_contents {
    individual_id uuid [ ref: - individuals.id ]
    inaturalist_taxa_id integer [ not null ]
    identified_by_id uuid [ ref: > members.id ]
}

Table tagged_individuals_contents {
    individual_id uuid [ ref: - individuals.id ]
    is_tagged boolean
    with_ring boolean
    ring_number varchar
}


Table cameras {
    id uuid [ pk, unique ]
    model_name varchar
}

Table events {
    id uuid [ pk, unique ]
    chinese_name varchar
    english_name varchar
}

Table behaviors {
    id uuid [ pk, unique ]
    chinese_name varchar
    english_name varchar
}

Table mount_types {
    id uuid [ pk, unique ]
    chinese_name varchar
}

Table species {
    taxon_order integer [ pk, unique ]
    scientific_name varchar
    english_common_name varchar
    chinese_common_name varchar
    order varchar
    family_name varchar
    family_latin_name varchar
    taiwan_status varchar
    matzu_status varchar
    kinmen_status varchar
    pratas_status varchar
    endemism varchar
    conservation_status conservation_status
}

Enum media_status {
    undetected
    unchecked
    ubreviewed
    unchecked
    accidental
}

Enum media_type {
    image
    video
}

Enum prey_identified_status {
    unchecked
    unidentified
    identified
}

Enum tag_status {
    unchecked
    ring
    tagged
    number_assigned
}

Enum habitats {
    natural
    artificial
    solar_panel
}

Enum positions {
    professor
    postdoc
    doctor
    master
    undergrad
    assistant
    part_time
}

Enum mount_layers {
    high
    middle
    low
}

Enum conservation_status {
    I
    II
    III
}